fix : bug overflow orizontal

--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,7 @@ button:hover{
 
 /* section test free */
 #test_free{
-    width: 100vw;
+    width: 100%;
     background-color: hsl(207.06deg 51.52% 80.59%);
 }
 
